// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TailwindConverter > should consider \`prefix\`, \`separator\` configurations 1`] = `
".foo {
    @apply tw-pt-3 tw-pb-3 tw-text-xs [animation-delay:200ms] tw-border-4 tw-border-solid tw-border-transparent hover_tw-blur-sm hover_tw-brightness-50 hover_tw-sepia hover_tw-contrast-100 hover_tw-hue-rotate-30 hover_tw-invert-0 hover_tw-opacity-5 hover_tw-saturate-150 hover_[transform:translateX(12px)_translateY(0.5em)_translateZ(0.5rem)_scaleY(0.725)_rotate(124deg)] hover_tw-text-base md_tw-font-semibold;
}
@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}
"
`;

exports[`TailwindConverter > should convert the css part string 1`] = `
"{
    @apply text-center text-xs hover:text-base md:font-semibold;
}"
`;

exports[`TailwindConverter > should convert the simple CSS 1`] = `
".foo {
    @apply pt-3 pb-3 text-xs [animation-delay:200ms] border-4 border-solid border-transparent hover:blur-sm hover:brightness-50 hover:sepia hover:contrast-100 hover:hue-rotate-30 hover:invert-0 hover:opacity-5 hover:saturate-150 hover:[transform:translateX(12px)_translateY(0.5em)_translateZ(0.5rem)_scaleY(0.725)_rotate(124deg)] hover:text-base md:font-semibold;
}
@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}
"
`;

exports[`TailwindConverter > should not prefix arbitrary properties 1`] = `
".foo {
    @apply tw-pt-3 tw-pb-3 tw-text-xs [animation-delay:200ms] tw-border-4 tw-border-solid tw-border-transparent hover:tw-blur-sm hover:tw-brightness-50 hover:tw-sepia hover:tw-contrast-100 hover:tw-hue-rotate-30 hover:tw-invert-0 hover:tw-opacity-5 hover:tw-saturate-150 hover:[transform:translateX(12px)_translateY(0.5em)_translateZ(0.5rem)_scaleY(0.725)_rotate(124deg)] hover:tw-text-base md:tw-font-semibold;
}
@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}
"
`;
